force-app/main/default/objects/SLA_Notification_Config__mdt/SLA_Notification_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuracao central de notificacoes SLA de Task.</description>
    <label>SLA Notification Config</label>
    <pluralLabel>SLA Notification Configs</pluralLabel>
</CustomObject>