force-app/main/default/objects/SLA_Notification_Config__mdt/fields/CustomNotificationTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>CustomNotificationTypeDevName__c</fullName>
    <description>DeveloperName do Custom Notification Type.</description>
    <label>Custom Notification Type Dev Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>