force-app/main/default/objects/SLA_Notification_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Habilita/desabilita o envio.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>