force-app/main/default/objects/SLA_Notification_Config__mdt/fields/MinutesAfterDue__c.field-meta.xml
<CustomField>
    <fullName>MinutesAfterDue__c</fullName>
    <description>Minutos apos vencimento para alerta.</description>
    <label>Minutes After Due</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>