force-app/main/default/objects/SLA_Notification_Config__mdt/fields/MinutesBeforeDue__c.field-meta.xml
<CustomField>
    <fullName>MinutesBeforeDue__c</fullName>
    <description>Minutos antes do vencimento para alerta.</description>
    <label>Minutes Before Due</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>