force-app/main/default/objects/SLA_Notification_Config__mdt/fields/NotifyManager__c.field-meta.xml
<CustomField>
    <fullName>NotifyManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notificar o gestor do owner.</description>
    <label>Notify Manager</label>
    <type>Checkbox</type>
</CustomField>