force-app/main/default/objects/SLA_Notification_Config__mdt/fields/NotifyOwner__c.field-meta.xml
<CustomField>
    <fullName>NotifyOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Notificar o owner da Task (quando user).</description>
    <label>Notify Owner</label>
    <type>Checkbox</type>
</CustomField>