force-app/main/default/objects/SLA_Notification_Config__mdt/fields/NotifyQueue__c.field-meta.xml
<CustomField>
    <fullName>NotifyQueue__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Notificar owners/membros de fila quando owner for Queue.</description>
    <label>Notify Queue</label>
    <type>Checkbox</type>
</CustomField>