force-app/main/default/objects/SLA_Notification_Config__mdt/fields/OwnerType__c.field-meta.xml
<CustomField>
    <fullName>OwnerType__c</fullName>
    <description>Filtro de owner: ANY, USER, QUEUE.</description>
    <label>Owner Type</label>
    <type>Text</type>
    <length>20</length>
</CustomField>