force-app/main/default/objects/SLA_Notification_Config__mdt/fields/PriorityIn__c.field-meta.xml
<CustomField>
    <fullName>PriorityIn__c</fullName>
    <description>Lista separada por virgula de prioridades permitidas.</description>
    <label>Priority In</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>