force-app/main/default/objects/SLA_Notification_Config__mdt/fields/QueueDeveloperNames__c.field-meta.xml
<CustomField>
    <fullName>QueueDeveloperNames__c</fullName>
    <description>Lista separada por virgula de DeveloperName de filas permitidas.</description>
    <label>Queue Developer Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>