force-app/main/default/objects/SLA_Notification_Config__mdt/fields/ReportLink__c.field-meta.xml
<CustomField>
    <fullName>ReportLink__c</fullName>
    <description>Link do report/lista para incluir no email.</description>
    <label>Report Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>