force-app/main/default/objects/SLA_Notification_Config__mdt/fields/SendBell__c.field-meta.xml
<CustomField>
    <fullName>SendBell__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enviar notificacao no sino (Custom Notification).</description>
    <label>Send Bell</label>
    <type>Checkbox</type>
</CustomField>