force-app/main/default/objects/SLA_Notification_Config__mdt/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enviar email para destinatarios.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>