force-app/main/default/objects/SLA_Notification_Config__mdt/fields/SubjectContains__c.field-meta.xml
<CustomField>
    <fullName>SubjectContains__c</fullName>
    <description>Lista separada por virgula de termos que devem existir no Subject.</description>
    <label>Subject Contains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>