force-app/main/default/objects/SLA_Notification_Config__mdt/fields/SubjectNotContains__c.field-meta.xml
<CustomField>
    <fullName>SubjectNotContains__c</fullName>
    <description>Lista separada por virgula de termos que NAO devem existir no Subject.</description>
    <label>Subject Not Contains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>