force-app/main/default/objects/SLA_Notification_Config__mdt/fields/TaskSubtypeIn__c.field-meta.xml
<CustomField>
    <fullName>TaskSubtypeIn__c</fullName>
    <description>Lista separada por virgula de TaskSubtype permitidos.</description>
    <label>Task Subtype In</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>