force-app/main/default/objects/SLA_Notification_Config__mdt/fields/TaskTypeIn__c.field-meta.xml
<CustomField>
    <fullName>TaskTypeIn__c</fullName>
    <description>Lista separada por virgula de Type permitidos.</description>
    <label>Task Type In</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>