force-app/main/default/objects/SLA_Notification_Config__mdt/fields/TopN__c.field-meta.xml
<CustomField>
    <fullName>TopN__c</fullName>
    <description>Quantidade maxima de itens exibidos no email resumo.</description>
    <label>Top N</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>